opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/async_udp"
bug-reports: "https://github.com/janestreet/async_udp/issues"
dev-repo: "git+https://github.com/janestreet/async_udp.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/async_udp/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "async"
  "core"
  "core_kernel"
  "core_unix"
  "ppx_jane"
  "dune"        {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Monadic concurrency library"
description: "
Part of Jane Street's Core library
The Core suite of libraries is an industrial strength alternative to
OCaml's standard library that was developed by Jane Street, the
largest industrial user of OCaml.
"
